@@ -1,0 +1,4 @@
+= Current Branch
+:page-language: git
+
+ $ git rev-parse --abbrev-ref HEAD
